--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native": "^6.1.18",
     "@reduxjs/toolkit": "^2.2.8",
     "axios": "^1.7.7",
-    "expo": "~51.0.28",
+    "expo": "^51.0.37",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
