--- a/package.json
+++ b/package.json
@@ -1,54 +1,60 @@
 {
-	"name": "interesting-play",
-	"main": "expo-router/entry",
-	"version": "1.0.0",
-	"scripts": {
-		"start": "expo start",
-		"ios": "expo start --ios",
-		"android": "expo start --android",
-		"web": "expo start --web",
-		"build-web": "expo export -p web",
-		"test": "jest --watchAll",
-		"lint": "expo lint"
-	},
-	"jest": {
-		"preset": "jest-expo"
-	},
-	"dependencies": {
-		"@expo/vector-icons": "^14.0.4",
-		"@react-native-async-storage/async-storage": "1.23.1",
-		"@react-navigation/native": "^6.1.18",
-		"@reduxjs/toolkit": "^2.2.8",
-		"axios": "^1.7.7",
-		"expo": "^51.0.37",
-		"expo-constants": "~16.0.2",
-		"expo-font": "~12.0.9",
-		"expo-linking": "~6.3.1",
-		"expo-router": "~3.5.23",
-		"expo-splash-screen": "~0.27.5",
-		"expo-status-bar": "~1.12.1",
-		"expo-system-ui": "~3.0.7",
-		"expo-web-browser": "~13.0.3",
-		"react": "18.2.0",
-		"react-dom": "18.2.0",
-		"react-native": "0.74.5",
-		"react-native-gesture-handler": "~2.16.1",
-		"react-native-reanimated": "~3.10.1",
-		"react-native-root-toast": "^3.6.0",
-		"react-native-safe-area-context": "4.10.5",
-		"react-native-screens": "3.31.1",
-		"react-native-web": "~0.19.10",
-		"react-redux": "^9.1.2"
-	},
-	"devDependencies": {
-		"@babel/core": "^7.20.0",
-		"@types/jest": "^29.5.12",
-		"@types/react": "~18.2.45",
-		"@types/react-test-renderer": "^18.0.7",
-		"jest": "^29.2.1",
-		"jest-expo": "~51.0.3",
-		"react-test-renderer": "18.2.0",
-		"typescript": "~5.3.3"
-	},
-	"private": true
+  "name": "interesting-play",
+  "main": "expo-router/entry",
+  "version": "1.0.0",
+  "scripts": {
+    "dev-start": "expo start",
+    "dev-start-ios": "expo start --ios",
+    "dev-start-ios-local": "expo run:ios",
+    "dev-start-android": "expo start --android",
+    "dev-start-android-local": "expo run:android",
+    "dev-start-web": "expo start --web",
+    "prebuild": "expo prebuild --clean",
+    "build-web": "expo export -p web",
+    "test": "jest --watchAll",
+    "lint": "expo lint",
+    "android": "expo run:android",
+    "ios": "expo run:ios"
+  },
+  "jest": {
+    "preset": "jest-expo"
+  },
+  "dependencies": {
+    "@expo/vector-icons": "^14.0.4",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-navigation/native": "^6.1.18",
+    "@reduxjs/toolkit": "^2.2.8",
+    "axios": "^1.7.7",
+    "expo": "^51.0.37",
+    "expo-constants": "~16.0.2",
+    "expo-font": "~12.0.9",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.23",
+    "expo-splash-screen": "~0.27.5",
+    "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "~3.0.7",
+    "expo-web-browser": "~13.0.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.74.5",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-root-toast": "^3.6.0",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "react-native-web": "~0.19.10",
+    "react-redux": "^9.1.2",
+    "expo-dev-client": "~4.0.28"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0",
+    "@types/jest": "^29.5.12",
+    "@types/react": "~18.2.45",
+    "@types/react-test-renderer": "^18.0.7",
+    "jest": "^29.2.1",
+    "jest-expo": "~51.0.3",
+    "react-test-renderer": "18.2.0",
+    "typescript": "~5.3.3"
+  },
+  "private": true
 }
