feat: 首页头部组件

--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,7 @@
-EXPO_PUBLIC_API_URL=http://192.168.31.232:3000/
+###
+ # @Author: xt-guiyi 1661219752@qq.com
+ # @Date: 2024-10-13 18:06:43
+ # @LastEditors: xt-guiyi 1661219752@qq.com
+ # @LastEditTime: 2024-10-15 21:44:44
+### 
+EXPO_PUBLIC_API_URL=http://192.168.31.224:3000/
